--- a/src/App.xaml
+++ b/src/App.xaml
@@ -18,12 +18,15 @@
             <ResourceDictionary.MergedDictionaries>
 
                 <ResourceDictionary Source="pack://application:,,,/KarveControls;component/Styles/KarveStyle.xaml" />
+                <ResourceDictionary  Source="/Syncfusion.Shared.WPF;Component/SkinManager/MetroStyle.xaml"/>
+              <!--
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Cobalt.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/Dragablz;component/Themes/mahapps.xaml" />
+                -->
                 <ResourceDictionary>
                     <ObjectDataProvider x:Key="ResourceLanguage" 
                                         ObjectType="{x:Type karveLocale:LocaleResourceFactory}" 
