--- a/src/Modules/MasterModule/Views/FaresInfoView.xaml
+++ b/src/Modules/MasterModule/Views/FaresInfoView.xaml
@@ -141,7 +141,7 @@
             </Grid.RowDefinitions>
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="Loaded">
-                    <prism:InvokeCommandAction Command="{Binding ActiveSubsystemCommand, PresentationTraceSources.TraceLevel=High}"/>
+                    <prism:InvokeCommandAction Command="{Binding ActiveSubsystemCommand }"/>
                 </i:EventTrigger>
             </i:Interaction.Triggers>
             <Grid Grid.Row="0">
