--- a/src/Modules/MasterModule/Views/Vehicles/VehicleSell.xaml
+++ b/src/Modules/MasterModule/Views/Vehicles/VehicleSell.xaml
@@ -39,7 +39,7 @@
                                        IsReadOnlySecond="True"
                                        DataFieldFirst="comprador"
                                        AssistTableName="clientes1"
-                                       ItemChangedCommand="{Binding ItemChangedCommand,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged,PresentationTraceSources.TraceLevel=High}"
+                                       ItemChangedCommand="{Binding ItemChangedCommand,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                                        MagnifierCommand="{Binding AssistCommand, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                        AssistQuery="{Binding BuyerAssistQuery, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                        AssistDataFieldFirst="numero_cli"
@@ -57,13 +57,13 @@
                               Margin="5,0,0,0"
                               DataSourcePath="precio"
                               DataObject="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                              ItemChangedCommand="{Binding ItemChangedCommand,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged,PresentationTraceSources.TraceLevel=High}"
+                              ItemChangedCommand="{Binding ItemChangedCommand,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                               Height="30"/>
                         <kc:DataField LabelText="{Binding StringConstants.StretPrice}"
                               TextContentWidth="150" 
                               LabelTextWidth="120"
                               DataSourcePath="PVP"
-                              ItemChangedCommand="{Binding ItemChangedCommand,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged,PresentationTraceSources.TraceLevel=High}"
+                              ItemChangedCommand="{Binding ItemChangedCommand,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                                  
                               DataObject="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                               Height="30"
@@ -74,7 +74,7 @@
                               TextContentWidth="100"
                               LabelTextWidth="110"
                               DataSourcePath="FRAVEN"
-                              ItemChangedCommand="{Binding ItemChangedCommand,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged,PresentationTraceSources.TraceLevel=High}"
+                              ItemChangedCommand="{Binding ItemChangedCommand,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                               DataObject="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                               Height="25"
                               Margin="5,5,5,0"/>
@@ -82,7 +82,7 @@
                                    LabelText="{Binding StringConstants.BillingDate}"
                                    LabelVisible="True"
                                    Height="40"        
-                                   kc:ControlExt.ItemChangedCommand="{Binding ItemChangedCommand,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged,PresentationTraceSources.TraceLevel=High}"
+                                   kc:ControlExt.ItemChangedCommand="{Binding ItemChangedCommand,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                                    kc:ControlExt.DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                    kc:ControlExt.DataSourcePath="FFRA"
                 />
@@ -94,7 +94,7 @@
                     TextContentSecondWidth="150"
                     IsReadOnlySecond="True"
                     DataFieldFirst="VENDEDOR_VTA"
-                    ItemChangedCommand="{Binding ItemChangedCommand,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged,PresentationTraceSources.TraceLevel=High}"             
+                    ItemChangedCommand="{Binding ItemChangedCommand,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"             
                     DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                     AssistTableName="VENDEDOR"
                     MagnifierCommand="{Binding AssistCommand, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
@@ -111,25 +111,25 @@
                         <kc:DataDatePicker Height="40" 
                                            LabelText="{Binding StringConstants.TrafficRenounce}"
                                            LabelVisible="True"
-                                           kc:ControlExt.ItemChangedCommand="{Binding ItemChangedCommand, PresentationTraceSources.TraceLevel=High}"
+                                           kc:ControlExt.ItemChangedCommand="{Binding ItemChangedCommand}"
                                            kc:ControlExt.DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                            kc:ControlExt.DataSourcePath="FTRAFB"       />
                         <kc:DataDatePicker LabelText="{Binding StringConstants.AssuranceRenount}" 
                                            Height="40"
                                            LabelVisible="True"
-                                           kc:ControlExt.ItemChangedCommand="{Binding ItemChangedCommand, PresentationTraceSources.TraceLevel=High}"
+                                           kc:ControlExt.ItemChangedCommand="{Binding ItemChangedCommand}"
                                            kc:ControlExt.DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                            kc:ControlExt.DataSourcePath=""/>
                         <kc:DataDatePicker LabelText="{Binding StringConstants.BankTransfer}" DataDatePickerHeight="25"
                                            LabelVisible="True"
                                            Height="40"
-                                           kc:ControlExt.ItemChangedCommand="{Binding ItemChangedCommand, PresentationTraceSources.TraceLevel=High}"
+                                           kc:ControlExt.ItemChangedCommand="{Binding ItemChangedCommand}"
                                            kc:ControlExt.DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                            kc:ControlExt.DataSourcePath="FTRANS"/>
                         <kc:DataDatePicker LabelText="{Binding StringConstants.DeliveringDate}" DataDatePickerHeight="25"  
                                            LabelVisible="True"
                                            Height="40"
-                                           kc:ControlExt.ItemChangedCommand="{Binding ItemChangedCommand, PresentationTraceSources.TraceLevel=High}"
+                                           kc:ControlExt.ItemChangedCommand="{Binding ItemChangedCommand}"
                                            kc:ControlExt.DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                            kc:ControlExt.DataSourcePath="FENTREGA_VEHI"/>
                     </WrapPanel>
